completed project with css

--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE HTML>
 <html ng-app="chatroom">
-  <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body ng-controller="mainCtrl">
-    <div class="main-container">
-      <h1> DevMountain Chat Room </h1>
-      <form ng-submit="postMessage(message)">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
-      </form>
-      <div class="messages-container">
-        <p ng-repeat="message in messages ">
-          {{message.message}} </p>
-      </div>
-    </div>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/mainCtrl.js"></script>
-    <script src="js/messageService.js"></script>
-  </body>
+<head>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body ng-controller="mainCtrl">
+  <div class="main-container">
+    <div class="header">
+    </div>
+    <h1> DevMountain Chat Room </h1>
+    <p class="by-who">
+      A Simple Chat App Made By:
+      <br />
+      <span>Jacob Leatherwood</span>
+    </p>
+    <form ng-submit="postMessage(message)">
+      <input class="form-control text-box" type="text" ng-model="message" placeholder="Compose Message">
+    </form>
+    <div class="messages-container">
+      <p class="message-header">
+        Messages From DevMountaineers
+      </p>
+      <p class="message" ng-repeat="message in messages ">
+        <span id="message">{{message.message}}</span>  <span id="date">{{message.createdAt | date : 'short'}}</span></p>
+    </div>
+  </div>
+
+
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/mainCtrl.js"></script>
+  <script src="js/messageService.js"></script>
+</body>
+
 </html>
